<resources>
    <string name="app_name">YourVote</string>
    <string name="text_LoginHeading">Login</string>
    <string name="txt_login_email">Email/Mobile</string>
    <string name="txt_login_password">Password</string>
    <string name="txt_login_button">Login</string>
    <string name="txt_forgot_password">Forgot Password?</string>
    <string name="txt_noAccount">Do not Have Account?</string>
    <string name="txt_login_with_google">Login with Google</string>
    <string name="text_Signup_Heading">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="re_enter_password">Re-Enter password</string>
    <string name="birthdate">Birth date </string>
    <string name="aadhar_number">Aadhar number</string>
    <string name="voter_number"> Voter ID</string>
    <string name="txt_signup_button">Sign up</string>
    <string name="phone_number">Mobile Number</string>
    <string name="signup_with_google">Sign up With Google</string>
    <string name="temp1">This is Headline Of the News.....</string>
    <string name="temp2">This will be sub title or description of News</string>
    <string name="search_button1">Current Issues</string>
    <string name="search_button2">Press Release</string>
    <string name="search_button3">Important Instruction</string>
    <string name="register_now">Vote Now"</string>
    <string name="btn_register">Vote Now</string>
    <string name="btn_result">Check Result</string>
    <string name="heading_voterAuth">Voter Authentication</string>
    <string name="user_id_text">User ID</string>
    <string name="txt_birthdate">Birth Date</string>
    <string name="select_birthday">Tap here to select</string>
    <string name="tv_otp"> Enter OTP</string>
    <string name="GetOTP"> Get OTP</string>
    <string name="ResendOTP">Resend OTP</string>
    <string name="Reset_Password">Reset Password</string>
    <string name="submit"> Submit</string>
    <string name="txt_give_vote_heading">Choose any one party</string>

    <string name="partyName_bjp">Bharatiya Janata Party</string>
    <string name="candidateName_bjp">Dyushyant Patel</string>

    <string name="partyName_congress">Indian National Congress</string>
    <string name="candidateName_congress">Sandeep Tanwar</string>

    <string name="partyName_bsp">Bahujan Samaj Party</string>
    <string name="candidateName_bsp">Mukesh Goyal</string>

    <string name="partyName_aap">Aam Aadmi Party</string>
    <string name="candidateName_aap">Sarita Singh</string>

    <string name="cast_vote">Vote</string>
    <string name="vote_finished">Successful, Thanks for Voting</string>
    <string name="return_home">Return to Home</string>
    <string name="btn_tutorial">Start Tutorial</string>
    <string name="voting_fragment_description">Your vote is a contribution to make a beautiful democratic and help to choose the correct leader for the nation. Your one vote can make the difference, your one vote can change the nation, your one vote can help to grow the nation. Every single vote is very important for the nation so grab your hands and register now to be ready for cast vote.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_exit_tutorial">Return to Vote Page</string>
    <string name="step1">Step:1 : First Register yourself by filling information in sign up page</string>
    <string name="step2">Step 2: Fill email or phone and password and login into application</string>
    <string name="step3">Step 3: Go on to voting tab and press Vote now Button</string>
    <string name="step4">Step 4: Now Authenticate yourself by filling information and OTP</string>
    <string name="step5">Step 5: After authentication successful, you will redirected to voting page</string>
    <string name="step6">Step 6: Now click on button which party you want to give vote and press on vote button</string>
    <string name="step7">Step 7: After pressing vote button if you get voting successful page means your vote is submitted</string>
    <string name="watch_images">Watch Screenshot</string>
    <string name="next">Next</string>
</resources>
