<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TutorialFragment">

   <RelativeLayout
       android:layout_marginTop="30dp"
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <TextView
           android:id="@+id/tv_step1"
           android:layout_margin="10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_centerHorizontal="true"
           android:textAlignment="center"
           android:textSize="20sp"
           android:textStyle="bold"
           android:textColor="#000000"
           android:text="@string/step1"/>
       <TextView
           android:id="@+id/tv_step2"
           android:layout_below="@id/tv_step1"
           android:layout_margin="10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_centerHorizontal="true"
           android:textAlignment="center"
           android:textSize="20sp"
           android:textStyle="bold"
           android:textColor="#000000"
           android:text="@string/step2"/>
       <TextView
           android:id="@+id/tv_step3"
           android:layout_below="@id/tv_step2"
           android:layout_margin="10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_centerHorizontal="true"
           android:textAlignment="center"
           android:textSize="20sp"
           android:textStyle="bold"
           android:textColor="#000000"
           android:text="@string/step3"/>

       <TextView
           android:id="@+id/tv_step4"
           android:layout_below="@id/tv_step3"
           android:layout_margin="10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_centerHorizontal="true"
           android:textAlignment="center"
           android:textSize="20sp"
           android:textStyle="bold"
           android:textColor="#000000"
           android:text="@string/step4"/>
       <TextView
           android:id="@+id/tv_step5"
           android:layout_below="@id/tv_step4"
           android:layout_margin="10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_centerHorizontal="true"
           android:textAlignment="center"
           android:textSize="20sp"
           android:textStyle="bold"
           android:textColor="#000000"
           android:text="@string/step5"/>
       <TextView
           android:id="@+id/tv_step6"
           android:layout_below="@id/tv_step5"
           android:layout_margin="10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_centerHorizontal="true"
           android:textAlignment="center"
           android:textSize="20sp"
           android:textStyle="bold"
           android:textColor="#000000"
           android:text="@string/step6"/>
       <TextView
           android:id="@+id/tv_step7"
           android:layout_below="@id/tv_step6"
           android:layout_margin="10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_centerHorizontal="true"
           android:textAlignment="center"
           android:textSize="20sp"
           android:textStyle="bold"
           android:textColor="#000000"
           android:text="@string/step7"/>

       <android.support.design.button.MaterialButton
           android:layout_marginTop="10dp"
           android:id="@+id/btn_Exit_Tutorial"
           android:layout_below="@id/tv_step7"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:fontFamily="sans-serif-black"
           android:elevation="8dp"
           android:textStyle="bold"
           android:textSize="20dp"
           android:layout_centerHorizontal="true"
           android:text="@string/btn_exit_tutorial">

       </android.support.design.button.MaterialButton>
   </RelativeLayout>

</FrameLayout>