<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".signup">

    <TextView
        android:id="@+id/heading_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-black"
        android:paddingTop="20dp"
        android:text="@string/text_Signup_Heading"
        android:textColor="@color/dullWhite"
        android:textSize="40sp"
        android:textStyle="bold"></TextView>


   <android.support.v7.widget.CardView
       app:cardCornerRadius="20dp"
       android:elevation="10dp"
       android:outlineAmbientShadowColor="@color/FakePrimaryDark"
       android:layout_marginTop="10dp"
       android:layout_marginRight="25dp"
       android:layout_marginLeft="25dp"
       android:layout_marginBottom="60dp"
       android:background="@drawable/login_shape"
       android:layout_below="@id/heading_signup"

       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <RelativeLayout
           android:layout_margin="5dp"
           android:padding="10dp"
           android:layout_width="match_parent"
           android:layout_height="match_parent">

           <android.support.design.widget.TextInputLayout
               android:id="@+id/first_name_layout"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="5dp">

               <AutoCompleteTextView
                   android:fontFamily="sans-serif-black"
                   android:id="@+id/et_first_name"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/first_name"
                   android:inputType="textPersonName"
                   android:maxLines="1"
                   android:singleLine="true" />
           </android.support.design.widget.TextInputLayout>
           <android.support.design.widget.TextInputLayout
               android:id="@+id/last_name_layout"
               android:layout_below="@id/first_name_layout"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="4dp">

               <AutoCompleteTextView
                   android:fontFamily="sans-serif-black"
                   android:id="@+id/et_last_name"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/last_name"
                   android:inputType="textPersonName"
                   android:maxLines="1"
                   android:singleLine="true" />
           </android.support.design.widget.TextInputLayout>
           <android.support.design.widget.TextInputLayout
               android:id="@+id/email_layout"
               android:layout_below="@id/last_name_layout"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="4dp">
               <AutoCompleteTextView
                   android:fontFamily="sans-serif-black"
                   android:id="@+id/et_email"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/prompt_email"
                   android:inputType="textEmailAddress"
                   android:maxLines="1"
                   android:singleLine="true" />
           </android.support.design.widget.TextInputLayout>
           <android.support.design.widget.TextInputLayout
               android:id="@+id/password_layout"
               android:layout_below="@id/email_layout"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="4dp">

               <EditText
                   android:fontFamily="sans-serif-black"
                   android:id="@+id/et_password"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/prompt_password"
                   android:imeActionId="6"
                   android:imeOptions="actionUnspecified"
                   android:inputType="textPassword"
                   android:maxLines="1"
                   android:singleLine="true" />
           </android.support.design.widget.TextInputLayout>
           <android.support.design.widget.TextInputLayout
               android:layout_below="@id/password_layout"
               android:id="@+id/birthdate_layout"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="4dp">

           <EditText
               android:fontFamily="sans-serif-black"
               android:id="@+id/etBirthdate"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/birthdate"
               android:inputType="date"
               android:imeActionId="6"
               android:imeOptions="actionUnspecified"
               android:maxLines="1"
               android:singleLine="true" />
           </android.support.design.widget.TextInputLayout>

           <android.support.design.widget.TextInputLayout

               android:id="@+id/phone_number_layout"
               android:layout_below="@id/birthdate_layout"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="4dp">
               <EditText
                   android:fontFamily="sans-serif-black"
                   android:id="@+id/et_phone_number"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/phone_number"
                   android:inputType="phone"
                   android:maxLines="1"
                   android:singleLine="true" />
           </android.support.design.widget.TextInputLayout>

           <android.support.design.widget.TextInputLayout

               android:id="@+id/aadhar_number_IL"
               android:layout_below="@id/phone_number_layout"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="4dp">
               <EditText
                   android:fontFamily="sans-serif-black"
                   android:id="@+id/et_aadhar_number"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/aadhar_number"
                   android:inputType="number"
                   android:maxLines="1"
                   android:singleLine="true" />
           </android.support.design.widget.TextInputLayout>

           <android.support.design.widget.TextInputLayout

               android:id="@+id/Voter_number_IL"
               android:layout_below="@id/aadhar_number_IL"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="4dp">
               <EditText
                   android:fontFamily="sans-serif-black"
                   android:id="@+id/et_voter_number"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/voter_number"
                   android:inputType="text"
                   android:maxLines="1"
                   android:singleLine="true" />
           </android.support.design.widget.TextInputLayout>

           <android.support.design.button.MaterialButton
               android:layout_below="@id/Voter_number_IL"
               android:id="@+id/btn_signup"
               style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_centerHorizontal="true"
               android:layout_marginTop="15dp"
               android:backgroundTint="#9EB7FF"
               android:fontFamily="sans-serif-black"
               android:text="@string/txt_signup_button"
               android:textSize="25sp"
               app:cornerRadius="10dp"
               app:rippleColor="@color/colorAccent"
               app:strokeColor="@color/FakePrimaryDark"
               app:strokeWidth="5dp"
               />




       </RelativeLayout>

   </android.support.v7.widget.CardView>

</RelativeLayout>