<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Search">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/home_title_linear"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/app_name"
                    android:fontFamily="sans-serif-black"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:textSize="35sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <ImageButton
                    android:layout_marginTop="9dp"
                    android:layout_marginLeft="75dp"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_account_circle_black_24dp"
                    android:background="@color/white"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/home_title_linear"
            android:orientation="vertical"
            android:padding="30dp"
            android:paddingTop="10dp">

            <SearchView
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:iconifiedByDefault="false"
                android:queryHint="Search Here">

            </SearchView>

            <ListView
                android:id="@+id/searchList"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp">


            </ListView>

            <android.support.design.button.MaterialButton
                android:id="@+id/search_button1"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/search_button1"/>
            <android.support.design.button.MaterialButton
                android:id="@+id/search_button2"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/search_button2"/>
            <android.support.design.button.MaterialButton
                android:id="@+id/search_button3"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/search_button3"/>
        </LinearLayout>

    </RelativeLayout>
</FrameLayout>